--- a/responsiveness.css
+++ b/responsiveness.css
@@ -1,4 +1,7 @@
 @media (max-width: 800px) {
+    html{
+        font-size: 65%
+    }
     .navbar {
         flex-direction: column;
         align-items: flex-start;
@@ -33,12 +36,17 @@
         display: flex;
     }
     .text-image{
+        
+        justify-content: center;
         flex-direction: column;
-        width: 50%;
+
     }
-    .text{
-        width: ;
+    .img img{
+        width: 400px;
+        height: 250px;
+
     }
+   
 }
 
 /* start */
@@ -46,11 +54,11 @@
 
 
 
-/* @media (max-width: 991) {
+@media (max-width: 991) {
     html{
         font-size: 55%
     }
-} */
+}
 /* 
 @media (max-width:600px){
 
