--- a/index.css
+++ b/index.css
@@ -847,22 +847,48 @@ footer
     height: 250px
 }
 
-/* USER SECTION END */
+
 
 /* FORM */
+
+.stage-container
+{
+    /* margin-left: 4rem;
+    margin-top: 4rem; */
+    display: flex;
+    flex-direction: row;
+    max-width: 100%;
+    justify-content: space-around;
+    background: #fafbfa;
+    
+   
+    
+}
+.container
+{
+    width: 100%;
+    line-height: 1.5rem;
+    display: flex;
+    height: 300px;
+}
+
+.stage
+{
+    color: #000;
+}
 
 
 
 #userForm
 {
-    width: 15%;
+    
     display: inline-block;
     text-transform: capitalize;
     
 }
 .inputBox
 {
-    margin-left: 1rem;
+    margin-left: 5rem;
     display: block;
 }
 .inputBox input
@@ -877,9 +903,10 @@ input
 }
 .submit
 {
-    background-color: #72ab23;
-    font-size: 0.8rem !important;
-    margin-left: 1rem;
+    background: -webkit-linear-gradient(to right, #0f820f , #d4af37);
+    background: linear-gradient( to right, #0f820f, #d4af37);
+    font-size: 1rem !important;
+    margin-left: 5rem;
     padding: .5rem .8rem;
     border-radius: 10px;
     font-weight: 100;
@@ -891,7 +918,10 @@ input
 {
     box-shadow: 0 0 20px #0d1601;
     transition: all 0.5s;
+
 }
+/* USER FORM END */
+
 .why-txt
 {
     width: 80%;
@@ -922,4 +952,52 @@ input
     display: flex;
    width: 30%;
    margin: 0rem 6rem 4rem;
+}
+/* USER SECTION END */
+
+/* HOW IT WORKS */
+.how-it-work
+{
+    width: 100%;
+    height: 100%;
+    background-color: #e6efe4;
+    left: 0;
+
+}
+#how_it_work-header
+{
+    text-align: center;
+    padding-top: 3rem;
+}
+.container_reg-img
+{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    
+}
+.how-it-steps
+{
+    display: flex;
+    justify-content: center;
+    margin: 60px;
+    width: 100%;
+}
+.container-how
+{
+    margin-left: 2rem;
+    line-height: 1.5rem;
+}
+.how-img
+{
+    margin: 1rem 0rem;
+}
+#how-reg
+{
+    margin: 0 .5rem .8rem;
+}
+#how-para
+{
+    font-size: .9rem;
+    color: #333;
 }
