--- a/index.css
+++ b/index.css
@@ -1001,3 +1001,117 @@ input
     font-size: .9rem;
     color: #333;
 }
+
+
+
+
+
+/* SIGN UP FORM STYLE */
+
+
+.company-name
+{
+    width: 100%;   
+}
+.company-title
+{
+    text-align: center;
+    font-size: 2.5rem;
+    margin-top: 3rem;
+    color: #2fd312;
+}
+.registartion
+{
+    text-align: center;
+    padding-top: 10px;
+    
+}
+.advert-form
+{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+.reg-form form
+{
+   padding: 4rem 9.5rem;  
+}
+input{
+    width: 380px;
+    height: 35px;
+    background: transparent;
+    border: 1px solid #333;
+    color: #555;
+    font-size: 15px;
+    letter-spacing: 1px;
+    margin-top: 30px;
+    font-family: sans-serif 
+}
+select
+{
+    width: 380px;
+    height: 35px;
+    background: transparent;
+    border: 1px solid #333;
+    color: #555;
+    font-size: 15px;
+    letter-spacing: 1px;
+    margin-top: 30px;
+    font-family: sans-serif 
+}
+.checkBox{
+    display: flex;
+    font-size: .8rem;
+}
+
+
+::placeholder
+{
+    color: #555;
+}
+.create-account{
+    margin-top: 1rem;
+    padding: 7px 9.3rem;
+    font-size: .9rem;
+    background-color: #B7B6B7;
+    border: none;
+    color: white;
+    width: 100%;
+}
+.create-account:hover
+{
+    background-color: #50B14A;
+    border: none;
+}
+.policy a{
+    text-decoration: none;
+    color: #2fd312;
+}
+
+
+
+/* MEDIA QUERIES */
+
+@media (max-width: 800px){
+    html{
+        font-size: 100%;
+    }
+    .advert-form{
+        flex-wrap: wrap;
+        width: 100%;
+        justify-content: center;
+    }
+    .sign-up-img{
+        width: 400px;
+        height: 200px;
+    }
+    .reg-form form{
+    
+        width: 100%;
+        padding-left: 7rem;
+    }
+    #spam{
+        width: 100%;
+    }
+
+}
