--- a/index.css
+++ b/index.css
@@ -869,7 +869,7 @@ footer
     width: 100%;
     line-height: 1.5rem;
     display: flex;
-    height: 300px;
+    height: 100%;
 }
 
 .stage
@@ -905,13 +905,13 @@ input
 {
     background: -webkit-linear-gradient(to right, #0f820f , #d4af37);
     background: linear-gradient( to right, #0f820f, #d4af37);
-    font-size: 1rem !important;
+    color: whitesmoke;
+    font-size: 1.1rem !important;
     margin-left: 5rem;
-    padding: .5rem .8rem;
+    width: 100px!important;
     border-radius: 10px;
     font-weight: 100;
     border: none;
-    margin-top: 1rem;
     cursor: pointer;
 }
 .submit:hover
@@ -961,7 +961,7 @@ input
     width: 100%;
     height: 100%;
     background-color: #e6efe4;
-    left: 0;
+    margin-top: 2rem;
 
 }
 #how_it_work-header
